# sakura-secure

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/app/: mod.rs  ssh.rs  tui.rs
client/src/model/: app.rs  mod.rs  ssh.rs
client/src/ui/: layout.rs  mod.rs
client/src/ui/component/: input.rs
client/src/ui/layout/: menu.rs  mod.rs  ssh_terminal.rs
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/handler/: mod.rs
