[package]
name = "sakura-secure-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
jsonwebtoken = "8"
serde = { version = "1", features = ["derive"] }
